postcss/testData/inspections/customSelectors/customSelectorWithInvalidTokenAt.pcss
@custom-selector <error descr="valid token expected">@</error>;